<resources>
    <string name="app_name">TODO</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">@string/app_name</string>
    <string name="action_settings">Settings</string>

    <string name="title_today">Today</string>
    <string name="title_todo">Todo</string>
    <string name="title_done">Done</string>
    <string name="title_info">About</string>
    <string name="title_activity_about">About</string>
    <string name="large_text_about">
        "This application is open source and follow the MIT license.\n\n"
        "Any questions please visit the github repository of this APP or mail to me.\n\n"
        "GitHub: https://github.com/shizuku \n\n"
    </string>
    <string name="title_activity_add">Add plan</string>
    <string name="action_ok">OK</string>
    <string name="action_swap_order">Order</string>
    <string name="hint_add_title">Title</string>
    <string name="hint_add_describe">Description</string>

    <string name="hint_add_priority_0">Important</string>
    <string name="hint_add_priority_1">Medium</string>
    <string name="hint_add_priority_2">Less important</string>
    <string name="hint_add_date_choose">Choose date</string>
    <string name="hint_add_time_choose">Choose time</string>
    <string name="msg_add_title_empty">The title cannot be empty</string>
    <string name="title_settings">Settings</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_rate">Rate This App</string>
    <string name="title_help">Help</string>
    <string name="developing">This app is not uploaded</string>
    <string name="title_activity_help">Help</string>
    <string name="large_text_help">
        "1. The function of up-down arrow button in the main view is to swap the order of time and importance. It is sorted by time in default.\n\n"
        "2. This APP does not request any extra permission，and does not connect the Internet. If you need back up data，please operate\"/sdcard/Android/data/com.shizuku.tools.todo/files/data.db\" directly.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_license" translatable="false">LICENSE</string>
    <string name="large_text_license" translatable="false">
        "The MIT License (MIT)\n\n"

        "Copyright (c) 2016 JackeyGao\n\n"

        "Permission is hereby granted, free of charge, to any person obtaining a copy"
        "of this software and associated documentation files (the "Software"), to deal"
        "in the Software without restriction, including without limitation the rights"
        "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell"
        "copies of the Software, and to permit persons to whom the Software is"
        "furnished to do so, subject to the following conditions:\n\n"

        "The above copyright notice and this permission notice shall be included in"
        "all copies or substantial portions of the Software.\n\n"

        "THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR"
        "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,"
        "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE"
        "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER"
        "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,"
        "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN"
        "THE SOFTWARE.\n\n"

    </string>
    <string name="hint_add_deadline">Deadline</string>
    <string name="title_activity_view">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_warning_title">Delete</string>
    <string name="dialog_warning_msg">Are you sure to delete?</string>
    <string name="dialog_warning_button_pos">OK</string>
    <string name="dialog_warning_button_neg">Cancel</string>
    <string name="dialog_finish_title">Finish</string>
    <string name="dialog_finish_msg">Are you sure to finish this task in advance?</string>
    <string name="empty_msg">No plan</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="about_license"><u>Open Source License</u></string>
    <string name="about_thanks"><u>Thanks</u></string>
    <string name="app_author">shizuku</string>
    <string name="title_activity_thanks">Thanks</string>
    <string name="large_text_thanks">
        "Thanks: \n"
    </string>
    <string name="channel_daily_id" translatable="false">channel_daily</string>
    <string name="channel_daily_name">Daily report</string>
    <string name="channel_daily_description">Report what you will do today</string>
    <string name="settings_messages_header">Message</string>
    <string name="settings_messages_title">Notification</string>
    <string name="settings_messages_daily_title">Daily report</string>
    <string name="settings_messages_daily_time_title">Daily report time</string>
    <string name="settings_messages_daily_summary_on">Daily report is ON</string>
    <string name="settings_messages_daily_summary_off">Daily report is OFF</string>
    <string name="message_daily_title_start">You have</string>
    <string name="message_daily_title_end">things to do</string>
    <string name="message_daily_description">Press to show details</string>
    <string name="app_version_num" translatable="false">1</string>
    <string name="settings_messages_summary_on">Allow Notification</string>
    <string name="settings_messages_summary_off">Ban Notification</string>
</resources>
