<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today_black_24dp"
            android:title="@string/title_today" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_todo_black_24dp"
            android:title="@string/title_todo" />
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_menu_done_black_24dp"
            android:title="@string/title_done" />
    </group>
    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help_black_24dp"
            android:title="@string/title_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_black_24dp"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback_black_24dp"
            android:title="@string/title_feedback" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_rate_black_24dp"
            android:title="@string/title_rate" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info_black_24dp"
            android:title="@string/title_info" />
    </group>

</menu>
