<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.AddActivity"
    tools:showIn="@layout/activity_add">

    <LinearLayout
        android:id="@+id/content_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_title" />

        <EditText
            android:id="@+id/edit_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_describe" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/hint_add_priority_0" />

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_add_priority_1" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_add_priority_2" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_choose_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_horizontal_margin"
            android:gravity="center"
            android:text="@string/hint_add_date_choose"
            android:textSize="@dimen/recycler_font_size_subtitle" />

        <TextView
            android:id="@+id/text_choose_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/recycler_horizontal_margin"
            android:gravity="center"
            android:text="@string/hint_add_time_choose"
            android:textSize="@dimen/recycler_font_size_subtitle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
