<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_horizontal_margin"
            android:text="@string/app_version"
            android:textSize="@dimen/recycler_font_size_subtitle" />

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_horizontal_margin"
            android:text="@string/app_author"
            android:textSize="@dimen/recycler_font_size_subtitle" />

        <TextView
            android:id="@+id/text_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_horizontal_margin"
            android:autoLink="all"
            android:text="@string/about_license"
            android:textSize="@dimen/recycler_font_size_subtitle" />

        <TextView
            android:id="@+id/text_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_horizontal_margin"
            android:autoLink="all"
            android:text="@string/about_thanks"
            android:textSize="@dimen/recycler_font_size_subtitle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
